<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context=".activity.DetailUserActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <FrameLayout
        android:id="@+id/header1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/bg_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sample_username"
                android:textColor="@color/white"
                android:textStyle="italic"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteY="164dp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imagePhoto"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_username"
                tools:src="@tools:sample/avatars" />


            <TextView
                android:id="@+id/text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#52633737"
                android:text="@string/sample_fullName"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imagePhoto"
                tools:layout_editor_absoluteY="164dp" />

            <TextView
                android:id="@+id/text_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_company"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_baseline_work"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_name"/>

            <TextView
                android:id="@+id/text_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_loc"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                android:drawableLeft="@drawable/ic_baseline_home"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_company"/>

            <TextView
                android:id="@+id/text_bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_bio"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                android:drawableLeft="@drawable/ic_baseline_format_quote"
                android:drawableRight="@drawable/ic_baseline_format_quote"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_location"/>



            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:layout_marginTop="-20dp"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        app:cardCornerRadius="18dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Followers"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tvFollowers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="100"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Following"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tvFollowing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="100"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Repository"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/tvRepository"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="100"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpage2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    </LinearLayout>

</ScrollView>

